# rpi-fastbootd

./: .gitignore  .gitmodules  BUILDING_LICENSING.md  CMakeLists.txt  DEBIAN_PACKAGING.md  README.md  REPO_STRUCTURE.txt  build-package.sh
cmake/: DebianHardening.cmake  Findrpifwcrypto.cmake  Packaging.cmake  RaspberryPiHardening.cmake
debian/: .gitignore  README.Debian  README.source  changelog  changelog.template  control  copyright  gbp.conf  gen-version.sh  rpi-fastbootd.docs  rpi-fastbootd.lintian-overrides  rpi-fastbootd.service  rules
fastboot/: CMakeLists.txt  README.md  VERITY_MODES_COMPARISON.md  constants.h  socket.h
fastboot/device/: commands.cpp  commands.h  crypto_native.cpp  crypto_native.h  eeprom.cpp  eeprom.h  fastboot_device.cpp  fastboot_device.h  flashing.cpp  flashing.h  main.cpp  partition_lock_manager.cpp  partition_lock_manager.h  shared_idp.h  storage_literals.h  tcp_client.cpp  tcp_client.h  usb.cpp  usb_client.cpp  usb_iouring.cpp  utility.cpp  utility.h  variables.cpp  variables.h
fastboot/device/test/: CMakeLists.txt  crypto_test.cpp  eeprom_test.cpp  fwcrypto_test.cpp  gateway_test.cpp  gpio_test.cpp  idp_crypto_test.cpp  kernel_log_test.cpp  verity_test.cpp
fastboot/examples/: README.md  ab_system_verity_luks.json  android_style_complete.json  separate_hash_example.json  simple_verified_system.json
fastboot/systemd/system/: configfs-init.service  data.mount  dev-usb\x2dffs-fastboot.mount  fastboot-udc-attach.service  fastbootd.service
libasyncio/: CMakeLists.txt
libsparse/: CMakeLists.txt
rpiidp/: CMakeLists.txt
rpiidp/include/: idpcrypt.h  idpdevice.h  idpparser.h  idpstorage.h  idpversion.h  nav.h  utility.h
rpiidp/src/: crypt.cpp  device.cpp  nav.cpp  parser.cpp  utility.cpp  version.cpp
rpiidp/test/: CMakeLists.txt  device_test.cpp  parser_test.cpp
rpiparted/: CMakeLists.txt
rpiparted/include/: rpiparted.h
rpiparted/src/: rpiparted.cpp
rpiparted/test/: CMakeLists.txt  rpiparted_test.cpp
